--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   google_fonts: ^8.0.0
   shared_preferences: ^2.5.4
   home_widget: ^0.9.0
+  record: ^6.1.2
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
