--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   path: ^1.9.1
   share_plus: ^12.0.1
   screenshot: ^3.0.0
+  timezone: ^0.9.0
+  flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
