--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   screenshot: ^3.0.0
   timezone: ^0.9.0
   flutter_local_notifications: ^17.0.0
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
