--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   timezone: ^0.9.0
   flutter_local_notifications: ^17.0.0
   sqflite: ^2.4.2
+  get_it: ^9.2.0
 
 dev_dependencies:
   flutter_test:
