--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   sqflite: ^2.4.2
   get_it: ^9.2.0
+  battery_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
