--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   sqflite: ^2.4.2
   get_it: ^9.2.0
   battery_plus: ^7.0.0
-  pay: ^3.3.0
+  purchases_flutter: ^7.0.0
 
 dev_dependencies:
   flutter_test:
@@ -68,8 +68,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/google_pay_config.json
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
